--- a/views/home.hbs
+++ b/views/home.hbs
@@ -8,6 +8,7 @@
 {{> header}}
 <p>{{screamIt WelcomeMessage}}</p>
 <p>Some text here</p>
+<img src="http://img.playground.ru/images/3/1/lightest.jpg" width="50%" align="center" border="3" hspace="10%" vspace="10%" />
 {{> footer}}
 </body>
 </html>
